--- a/htdocs/custom/affaire/langs/fr_FR/affaire.lang
+++ b/htdocs/custom/affaire/langs/fr_FR/affaire.lang
@@ -1,4 +1,4 @@
-# Copyright (C) 2024 Lucas NOIRIE <lnoirie@serem-electronics.com>
+# Copyright (C) ---Put here your own copyright and developer email---
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,35 +17,35 @@
 # Generic
 #
 
-# Module label 'ModuleAffaireName'
-ModuleAffaireName = Affaire
-# Module description 'ModuleAffaireDesc'
-ModuleAffaireDesc = Affaire description
+# Module label 'ModuleMyModuleName'
+ModuleMyModuleName = MyModule
+# Module description 'ModuleMyModuleDesc'
+ModuleMyModuleDesc = MyModule description
 
 #
 # Admin page
 #
-AffaireSetup = Affaire setup
+MyModuleSetup = MyModule setup
 Settings = Settings
-AffaireSetupPage = Affaire setup page
+MyModuleSetupPage = MyModule setup page
 NewSection=New section
-AFFAIRE_MYPARAM1 = My param 1
-AFFAIRE_MYPARAM1Tooltip = My param 1 tooltip
-AFFAIRE_MYPARAM2=My param 2
-AFFAIRE_MYPARAM2Tooltip=My param 2 tooltip
+MYMODULE_MYPARAM1 = My param 1
+MYMODULE_MYPARAM1Tooltip = My param 1 tooltip
+MYMODULE_MYPARAM2=My param 2
+MYMODULE_MYPARAM2Tooltip=My param 2 tooltip
 
 
 #
 # About page
 #
 About = About
-AffaireAbout = About Affaire
-AffaireAboutPage = Affaire about page
+MyModuleAbout = About MyModule
+MyModuleAboutPage = MyModule about page
 
 #
 # Sample page
 #
-AffaireArea = Home Affaire
+MyModuleArea = Home MyModule
 MyPageName = My page name
 
 #
