Object:Affaire and dictionnaries Initialiisation II

--- a/htdocs/custom/affaire/langs/en_US/affaire.lang
+++ b/htdocs/custom/affaire/langs/en_US/affaire.lang
@@ -20,7 +20,7 @@
 # Module label 'ModuleAffaireName'
 ModuleAffaireName = Affaire
 # Module description 'ModuleAffaireDesc'
-ModuleAffaireDesc = Affaire description
+ModuleAffaireDesc = Un module qui propose un réel suivis des affaires commerciales.
 
 #
 # Admin page
