--- a/htdocs/custom/affaire/langs/fr_FR/affaire.lang
+++ b/htdocs/custom/affaire/langs/fr_FR/affaire.lang
@@ -53,3 +53,10 @@ MyPageName = My page name
 #
 MyWidget = My widget
 MyWidgetDescription = My widget description
+
+
+
+
+Step=Étape
+
+ChangeStatus=Changer le status
